Widen slider text input to prevent overflow on 3-digit percentages

--- a/css/styles.css
+++ b/css/styles.css
@@ -846,7 +846,7 @@ select option {
 }
 
 .slider-text-input {
-  width: 70px;
+  width: 80px;
   flex-shrink: 0;
 }
 
